--- a/VSACReactNative/android/app/src/main/assets/appcenter-config.json
+++ b/VSACReactNative/android/app/src/main/assets/appcenter-config.json
@@ -1,3 +1,3 @@
 {
-    "app_secret": "What is the Android app secret? 41e7870e-3b0e-4726-9b99-935c894754e6"
+    "app_secret": "41e7870e-3b0e-4726-9b99-935c894754e6"
 }
