--- a/VSACReactNative/ios/Podfile
+++ b/VSACReactNative/ios/Podfile
@@ -13,6 +13,8 @@ target 'VSACReactNative' do
   
 
   platform :ios, '9.0'
+  pod 'CodePush', :path => '../node_modules/react-native-code-push'
+
   target 'VSACReactNativeTests' do
     inherit! :search_paths
     # Pods for testing
