--- a/VSACReactNative/package.json
+++ b/VSACReactNative/package.json
@@ -11,7 +11,8 @@
     "appcenter-analytics": "^1.4.0",
     "appcenter-crashes": "^1.4.0",
     "react": "16.2.0",
-    "react-native": "0.52.0"
+    "react-native": "0.52.0",
+    "react-native-code-push": "^5.2.2"
   },
   "devDependencies": {
     "babel-jest": "22.4.1",
